# RomShelf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
src/rom_shelf/: __init__.py  main.py
src/rom_shelf/core/: __init__.py  archive_processor.py  config_validator.py  extension_handler.py  logging_config.py  multi_file_validator.py  rom_database.py  rom_scanner.py  settings.py
src/rom_shelf/models/: rom_entry.py  rom_table_model.py
src/rom_shelf/services/: __init__.py  database_service.py  platform_service.py  ra_database.py  retroachievements_service.py  rom_scanning_service.py  search_service.py  service_container.py  settings_service.py
src/rom_shelf/ui/: action_column_delegate.py  main_window.py  settings_dialog.py  styles.py
src/rom_shelf/ui/delegates/: achievement_delegate.py  hash_delegate.py  language_delegate.py  region_delegate.py
src/rom_shelf/ui/main/: __init__.py  main_window.py  platform_tree.py  rom_table_view.py  scan_controller.py  scan_presenter.py  search_handler.py  toolbar_manager.py  ui_builder.py
src/rom_shelf/ui/settings/: __init__.py  demo_forms_page.py  interface_page.py  platform_specific_page.py  platforms_page.py  retroachievements_page.py  settings_base.py  settings_dialog.py
src/rom_shelf/ui/themes/: __init__.py  base_theme.py  modern_dark_theme.py  modern_light_theme.py  theme_manager.py  themed_widget.py  twilight_theme.py
src/rom_shelf/ui/widgets/: __init__.py  compact_button.py  flow_layout.py  scan_progress_dialog.py  scan_progress_dock.py  scan_progress_widget.py
src/rom_shelf/utils/: __init__.py  flag_icons.py  goodtools_parser.py  name_cleaner.py  nointro_parser.py  rom_parser_base.py  tosec_parser.py
