[project]
name = "rom-shelf"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.9.2",
    "py7zr>=1.0.0",
    "rarfile>=4.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "mypy>=1.18.1",
    "pip>=25.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
